-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.548 2009-06-19 22:14:16 guru Exp $
-----------------------------------------------------------------------------------------

2009-06-19	pwessel
	* gmt_globals.h:	Change default ascii format to %.12g to avoid loss of precision.
				Changed default for OUTPUT_DEGREE_FORMAT to D (-180/180) so it
				is the same as that for PLOT_DEGREE_FORMAT.
2009-06-18	pwessel
	* misc/gmtstitch.c:	Enhanced -T option to eliminate connections when the 2nd closest
				pair is too close.  Also added -C option to simply separate the
				open from the closed polygons (no stitching).

2009-06-17	pwessel
	* grdfft.c:		Now also has Butterworth band-pass filter.
	
2009-06-17	remko
	* gmt_init.c (GMT_begin):	GMT_history should come AFTER reading defaults, otherwise
				there is no way to switch it off.
	* gmt2kml.c:		Option -R becomes -Ra (otherwise takes it from .gmtcommands4).
				Default folder name now "%s Features", where %s is feature type.
				No longer produces empty segments (when all data out of bounds).
				Create folder per input file (except standard input).
				Ignore -C option when plotting lines or polygons.
	* gmt2kml.txt:		Added example of document hierarchy.

2009-06-16	pwessel
	* gmt2kml.{c,txt}:	-T now takes title and optionally folder name.  When -O or -K is used
				we always group features into folders and each folder has their own
				style settings.
	
2009-06-16	remko
	* gmtmath.c:		Fixed bug: tried to free memory that was not allocated.
	* gmt_io.c:		Allow specifying both -mi and -mo.
	* gmt2kml.{c,txt}:	Removed altitude argument of -E (had no purpose). Set default pen to 1,
				as specified.  Changed -AA to -Aa, inline with -Ag and -As.
				Altitude argument of -A becomes default altitude.  Fixed error with -Gn.
				Always write linestyle and polygon style (need for extrusion).
				Moved <extrude> and <altitudeMode> within <feature></feature>.