@@ -1,0 +1,7 @@
+.TP
+OPT(A)
+Features with an area smaller than \fImin_area\fP in km^2 or of hierarchical level that is lower than \fImin_level\fP or higher than \fImax_level\fP
+will not be plotted [Default is 0/0/4 (all features)].  Level 2 (lakes) contains regular lakes and wide river bodies which we normally include as lakes; append \fB+r\fP to just get
+river-lakes or \fB+l\fP to just get regular lakes.  Finally, append \fB+p\fP\fPpercent\fP to exclude polygons whose percentage area of the corresponding
+full-resolution feature is less than \fIpercent\fP.
+See GSHHS INFORMATION below for more details.
